# pai-hack-26-pp

./: .gitignore  .gitmodules  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INDEX_OFFLINE_LATENT_IMITATION.md  INFERENCE_GUIDE.md  LICENSE  OFFLINE_LATENT_IMITATION.md  OFFLINE_LATENT_IMITATION_SUMMARY.md  PRECOMPUTED_LAM_IMPLEMENTATION.md  PR_DESCRIPTION.md  QUICK_START_OFFLINE_LATENT_IMITATION.md  QUICK_START_PRECOMPUTED_LAM.md  README.md  README_OFFLINE_LATENT_IMITATION.md  pyproject.toml  requirements.txt  test_offline_latent_imitation.py  test_precomputed_lam.py
scripts/: app_inference_viz.py  inference.py  inference_utils.py  load_data.py  run_streamlit_app.sh  run_visualize_demo.sh  so101_mujoco_viewer.html  so101_visualizer.py  train.py  train_diffusion.py
